# moebius

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
experiments/: evol_new_final.ipynb  real_synthetic_new.ipynb  real_synthetic_new_1.ipynb  real_synthetic_new_viz_1.ipynb
moebius/: __init__.py  util.py
moebius/data/: generator.py
moebius/model/gmm/: bn.py  nn.py
moebius/model/gmm/evol/: bn.py  metric.py  optimizer.py  parameters.py
moebius/model/gmm/evol/graph/: auto_initializer.py  graph.py  initializer.py
moebius/model/gmm/evol/operators/: crossover.py  mutation.py  operator.py
moebius/models/: gmm.py
src/: lib.rs  main.rs
tutorials/: evol.ipynb  evol_new_final_viz.ipynb  generator.ipynb  nn.ipynb  olr_class_quality_new.ipynb
var/: .gitignore
