[package]
name = "moebius"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "moebius"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
nalgebra = "0.29.0"
statrs = "0.16.0"

pyo3 = { version = "0.18.2", features = ["extension-module"] }

[dev-dependencies]
approx = "0.5.1"
